--- a/config/locales/simple_form.pt-br.yml
+++ b/config/locales/simple_form.pt-br.yml
@@ -22,6 +22,7 @@ pt-BR:
         published_at: Publicado em
         category: Categoria
         author: Autor
+        featured: Destaque
     # hints:
     #   defaults:
     #     password: 'Mínimo de 8 caracteres.'
